<?xml version="1.0"?>
<package format="2">
    <name>talon_srx_hardware_interface</name>
    <version>0.0.1</version>
    <description>
        A ROS node wrapper for communicating with Talon SRX motor controllers over CAN
    </description>

    <maintainer email="ludovicvanasse@gmail.com">Ludovic Vanasse</maintainer>

    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>hardware_interface</depend>
    <depend>pluginlib</depend>

    <export>
        <hardware_interface plugin="${prefix}/talonSRX_plugin.xml"/>
    </export>
</package>
